--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.0",
+    "karma-requirejs": "^1.1.0",
+    "requirejs": "^2.3.5",
     "typescript": "^2.5.3"
   },
   "dependencies": {
