--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tokenizer.js",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A modern runtime text tokenizer, for modern web.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -8,7 +8,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tsc -p ."
+    "build": "tsc -p .",
+    "test": "npm run build && karma start karma.conf.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
     "type": "git",
@@ -30,13 +31,18 @@
     "@types/jasmine": "^2.6.2",
     "@types/lodash": "^4.14.80",
     "@types/rangy": "0.0.31",
+    "coveralls": "^3.0.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.1.0",
-    "karma-requirejs": "^1.1.0",
-    "requirejs": "^2.3.5",
-    "typescript": "^2.5.3"
+    "karma-source-map-support": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.5",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1"
   },
   "dependencies": {
     "detect-browser": "^2.0.0",
