--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "tokenizer.js",
   "version": "1.1.0",
   "description": "A modern runtime text tokenizer, for modern web.",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "build/index.js",
+  "typings": "build/index.d.ts",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "tsc -p .",
+    "buildCSS": "lessc styles/tokenizer.less dist/tokenizer.css",
+    "build": "tsc -p . && npm run buildCSS",
+    "dist": "npm run build && webpack --config=webpack.config.js",
     "test": "npm run build && karma start karma.conf.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "repository": {
@@ -41,7 +43,10 @@
     "karma-source-map-support": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.5",
+    "less": "^2.7.3",
+    "less-plugin-clean-css": "^1.5.1",
     "typescript": "^2.5.3",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "webpack": "^3.8.1"
   },
   "dependencies": {
