--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "lib" : ["es2016", "es5", "es6", "dom"]        
     },
     "exclude": [
-        "dist/**/*",
+        "build/**/*",
         "node_modules"
     ],
     "include": [
